@@ -1,5 +1,7 @@
 
 4.72  2014-01-29
+  - Fixed bug in Mojo::Transaction::WebSocket that prevented decompression
+    errors from being handled gracefully.
 
 4.71  2014-01-28
   - Fixed a few compression bugs in Mojo::Transaction::WebSocket and
